fixed spacing

--- a/code/frontend/static/style.css
+++ b/code/frontend/static/style.css
@@ -4,20 +4,26 @@ body{
     font-family: "Encode Sans Expanded", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-color: rgb(248, 249, 250);
 }
 
 /* navbar */
-nav a{
-    color: white;
-}
 
 .navbar-brand:hover{
     color: white;
 }
 
+.navbar-brand{
+    color: white;
+    font-weight: 500;
+}
+
+.navbar-nav a{
+    color: rgb(13, 202, 240);
+}  
 
 .navbar-nav a:hover{
-    color: rgb(26, 179, 255);
+    color: white;
 }
 
 
@@ -45,7 +51,6 @@ nav a{
 
 #matchCard{
     border-radius: 0%;
-    /* border: 0.08em solid rgb(26, 179, 255); */
 }
 
 #matchTitle{
